compose: Fix overlaping expand-compose icon.
The expand-compose icon currently overlaps with the
recipient input field of private message compose box.
Reduce the size of the division to fix overlap.

--- a/static/styles/compose.css
+++ b/static/styles/compose.css
@@ -116,7 +116,7 @@
 
     .pm_recipient {
         margin-left: 5px;
-        margin-right: 20px;
+        margin-right: 35px;
         display: flex;
         width: 100%;
     }
